// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`API Versioning Admin API Does an internal rewrite for canary URLs with accept version set 1: [body] 1`] = `
Object {
  "site": Object {
    "accent_color": "#FF1A75",
    "allow_external_signup": true,
    "cover_image": "https://static.ghost.org/v5.0.0/images/publication-cover.jpg",
    "description": "Thoughts, stories and ideas",
    "icon": null,
    "locale": "en",
    "logo": null,
    "title": "Ghost",
    "url": "http://127.0.0.1:2369/",
    "version": StringMatching /\\\\d\\+\\\\\\.\\\\d\\+/,
  },
}
`;

exports[`API Versioning Admin API Does an internal rewrite for canary URLs with accept version set 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": StringMatching /\\\\d\\+/,
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "deprecation": "version=\\"v4\\"",
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "link": "<http://127.0.0.1:2369/ghost/api/admin/site/>; rel=\\"latest-version\\"",
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`API Versioning Admin API Does an internal rewrite for v3 URL + POST with accept version set 1: [body] 1`] = `
Object {
  "tags": Array [
    Object {
      "accent_color": null,
      "canonical_url": null,
      "codeinjection_foot": null,
      "codeinjection_head": null,
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "description": null,
      "feature_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "meta_description": null,
      "meta_title": null,
      "name": "version tag",
      "og_description": null,
      "og_image": null,
      "og_title": null,
      "slug": "version-tag",
      "twitter_description": null,
      "twitter_image": null,
      "twitter_title": null,
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "url": "http://127.0.0.1:2369/404/",
      "visibility": "public",
    },
  ],
}
`;

exports[`API Versioning Admin API Does an internal rewrite for v3 URL + POST with accept version set 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": StringMatching /\\\\d\\+/,
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "deprecation": "version=\\"v3\\"",
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "link": "<http://127.0.0.1:2369/ghost/api/admin/tags/>; rel=\\"latest-version\\"",
  "location": StringMatching /https\\?:\\\\/\\\\/\\.\\*\\?\\\\/tags\\\\/\\[a-f0-9\\]\\{24\\}\\\\//,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-cache-invalidate": "/*",
  "x-powered-by": "Express",
}
`;

exports[`API Versioning Admin API allows invalid accept-version header 1: [body] 1`] = `
Object {
  "site": Object {
    "accent_color": "#FF1A75",
    "allow_external_signup": true,
    "cover_image": "https://static.ghost.org/v5.0.0/images/publication-cover.jpg",
    "description": "Thoughts, stories and ideas",
    "icon": null,
    "locale": "en",
    "logo": null,
    "title": "Ghost",
    "url": "http://127.0.0.1:2369/",
    "version": StringMatching /\\\\d\\+\\\\\\.\\\\d\\+/,
  },
}
`;

exports[`API Versioning Admin API allows invalid accept-version header 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": StringMatching /\\\\d\\+/,
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`API Versioning Admin API ignores invalid accept version header 1: [body] 1`] = `
Object {
  "site": Object {
    "accent_color": "#FF1A75",
    "description": "Thoughts, stories and ideas",
    "icon": null,
    "logo": null,
    "title": "Ghost",
    "url": "http://127.0.0.1:2369/",
    "version": StringMatching /\\\\d\\+\\\\\\.\\\\d\\+/,
  },
}
`;

exports[`API Versioning Admin API ignores invalid accept version header 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "167",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`API Versioning Admin API responds with 404 error when the resource cannot be found 1: [body] 1`] = `
Object {
  "errors": Array [
    Object {
      "code": null,
      "context": "Member not found.",
      "details": null,
      "ghostErrorCode": null,
      "help": null,
      "id": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      "message": "Resource not found error, cannot read member.",
      "property": null,
      "type": "NotFoundError",
    },
  ],
}
`;

exports[`API Versioning Admin API responds with 404 error when the resource cannot be found 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": StringMatching /\\\\d\\+/,
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`API Versioning Admin API responds with 406 for an unknown version with accept-version set ahead 1: [body] 1`] = `
Object {
  "errors": Array [
    Object {
      "code": "UPDATE_GHOST",
      "context": StringMatching /Provided client accept-version v99\\\\\\.0 is ahead of current Ghost version v\\\\d\\+\\\\\\.\\\\d\\+/,
      "details": null,
      "ghostErrorCode": null,
      "help": "Try upgrading your Ghost install.",
      "id": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      "message": "Request could not be served, the endpoint was not found.",
      "property": null,
      "type": "RequestNotAcceptableError",
    },
  ],
}
`;

exports[`API Versioning Admin API responds with 406 for an unknown version with accept-version set ahead 2: [headers] 1`] = `
Object {
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": StringMatching /\\\\d\\+/,
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`API Versioning Admin API responds with 406 for an unknown version with accept-version set behind 1: [body] 1`] = `
Object {
  "errors": Array [
    Object {
      "code": "UPDATE_CLIENT",
      "context": StringMatching /Provided client accept-version v1\\\\\\.0 is behind current Ghost version v\\\\d\\+\\\\\\.\\\\d\\+/,
      "details": null,
      "ghostErrorCode": null,
      "help": "Try upgrading your Ghost API client.",
      "id": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      "message": "Request could not be served, the endpoint was not found.",
      "property": null,
      "type": "RequestNotAcceptableError",
    },
  ],
}
`;

exports[`API Versioning Admin API responds with 406 for an unknown version with accept-version set behind 2: [headers] 1`] = `
Object {
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": StringMatching /\\\\d\\+/,
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`API Versioning Admin API responds with content version header even when accept version header is NOT PRESENT 1: [body] 1`] = `
Object {
  "site": Object {
    "accent_color": "#FF1A75",
    "allow_external_signup": true,
    "cover_image": "https://static.ghost.org/v5.0.0/images/publication-cover.jpg",
    "description": "Thoughts, stories and ideas",
    "icon": null,
    "locale": "en",
    "logo": null,
    "title": "Ghost",
    "url": "http://127.0.0.1:2369/",
    "version": StringMatching /\\\\d\\+\\\\\\.\\\\d\\+/,
  },
}
`;

exports[`API Versioning Admin API responds with content version header even when accept version header is NOT PRESENT 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": StringMatching /\\\\d\\+/,
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`API Versioning Admin API responds with current content version header when requested version is AHEAD and CAN respond 1: [body] 1`] = `
Object {
  "site": Object {
    "accent_color": "#FF1A75",
    "allow_external_signup": true,
    "cover_image": "https://static.ghost.org/v5.0.0/images/publication-cover.jpg",
    "description": "Thoughts, stories and ideas",
    "icon": null,
    "locale": "en",
    "logo": null,
    "title": "Ghost",
    "url": "http://127.0.0.1:2369/",
    "version": StringMatching /\\\\d\\+\\\\\\.\\\\d\\+/,
  },
}
`;

exports[`API Versioning Admin API responds with current content version header when requested version is AHEAD and CAN respond 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": StringMatching /\\\\d\\+/,
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`API Versioning Admin API responds with current content version header when requested version is BEHIND current version and CAN respond 1: [body] 1`] = `
Object {
  "site": Object {
    "accent_color": "#FF1A75",
    "allow_external_signup": true,
    "cover_image": "https://static.ghost.org/v5.0.0/images/publication-cover.jpg",
    "description": "Thoughts, stories and ideas",
    "icon": null,
    "locale": "en",
    "logo": null,
    "title": "Ghost",
    "url": "http://127.0.0.1:2369/",
    "version": StringMatching /\\\\d\\+\\\\\\.\\\\d\\+/,
  },
}
`;

exports[`API Versioning Admin API responds with current content version header when requested version is BEHIND current version and CAN respond 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": StringMatching /\\\\d\\+/,
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`API Versioning Admin API responds with error and sends email ONCE when requested version is BEHIND and CANNOT respond multiple times 1: [body] 1`] = `
Object {
  "errors": Array [
    Object {
      "code": "UPDATE_CLIENT",
      "context": StringMatching /Provided client accept-version v3\\.5 is behind current Ghost version v\\\\d\\+\\\\\\.\\\\d\\+/,
      "details": null,
      "ghostErrorCode": null,
      "help": "Try upgrading your Ghost API client.",
      "id": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      "message": "Request could not be served, the endpoint was not found.",
      "property": null,
      "type": "RequestNotAcceptableError",
    },
  ],
}
`;

exports[`API Versioning Admin API responds with error and sends email ONCE when requested version is BEHIND and CANNOT respond multiple times 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": StringMatching /\\\\d\\+/,
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`API Versioning Admin API responds with error and sends email ONCE when requested version is BEHIND and CANNOT respond multiple times 3: [body] 1`] = `
Object {
  "errors": Array [
    Object {
      "code": "UPDATE_CLIENT",
      "context": StringMatching /Provided client accept-version v3\\.5 is behind current Ghost version v\\\\d\\+\\\\\\.\\\\d\\+/,
      "details": null,
      "ghostErrorCode": null,
      "help": "Try upgrading your Ghost API client.",
      "id": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      "message": "Request could not be served, the endpoint was not found.",
      "property": null,
      "type": "RequestNotAcceptableError",
    },
  ],
}
`;

exports[`API Versioning Admin API responds with error and sends email ONCE when requested version is BEHIND and CANNOT respond multiple times 3: [html 1] 1`] = `
"<!doctype html>
<html>
<head>
<meta name=\\"viewport\\" content=\\"width=device-width\\">
<meta http-equiv=\\"Content-Type\\" content=\\"text/html; charset=UTF-8\\">
<title>Integration error</title>
<style>
/* -------------------------------------
    RESPONSIVE AND MOBILE FRIENDLY STYLES
------------------------------------- */
@media only screen and (max-width: 620px) {
    table[class=body] h1 {
    font-size: 28px !important;
    margin-bottom: 10px !important;
    }
    table[class=body] p,
        table[class=body] ul,
        table[class=body] ol,
        table[class=body] td,
        table[class=body] span,
        table[class=body] a {
    font-size: 16px !important;
    }
    table[class=body] .title {
    font-size: 22px !important;
    }
    table[class=body] .wrapper,
        table[class=body] .article {
    padding: 10px !important;
    }
    table[class=body] .content {
    padding: 0 !important;
    }
    table[class=body] .container {
    padding: 0 !important;
    width: 100% !important;
    }
    table[class=body] .main {
    border-left-width: 0 !important;
    border-radius: 0 !important;
    border-right-width: 0 !important;
    }
    table[class=body] .btn table {
    width: 100% !important;
    }
    table[class=body] .btn a {
    width: 100% !important;
    }
    table[class=body] .img-responsive {
    height: auto !important;
    max-width: 100% !important;
    width: auto !important;
    }
    table[class=body] p[class=small],
    table[class=body] a[class=small] {
    font-size: 12x !important;
    }
}
/* -------------------------------------
    PRESERVE THESE STYLES IN THE HEAD
------------------------------------- */
@media all {
    .ExternalClass {
    width: 100%;
    }
    .ExternalClass,
        .ExternalClass p,
        .ExternalClass span,
        .ExternalClass font,
        .ExternalClass td,
        .ExternalClass div {
    line-height: 100%;
    }
    .recipient-link a {
    color: inherit !important;
    font-family: inherit !important;
    font-size: inherit !important;
    font-weight: inherit !important;
    line-height: inherit !important;
    text-decoration: none !important;
    }
    #MessageViewBody a {
    color: inherit;
    text-decoration: none;
    font-size: inherit;
    font-family: inherit;
    font-weight: inherit;
    line-height: inherit;
    }
}
hr {
    border-width: 0;
    height: 0;
    margin-top: 34px;
    margin-bottom: 34px;
    border-bottom-width: 1px;
    border-bottom-color: #EEF5F8;
}
a {
    color: #3A464C;
}
</style>
</head>
<body style=\\"background-color: #ffffff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; -webkit-font-smoothing: antialiased; font-size: 14px; line-height: 1.5em; margin: 0; padding: 0; -ms-text-size-adjust: 100%; -webkit-text-size-adjust: 100%;\\">

<table border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" class=\\"body\\" style=\\"border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%;\\">
    <tr>
        <td style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 14px; vertical-align: top;\\">&nbsp;</td>
        <td class=\\"container\\" style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 14px; vertical-align: top; display: block; Margin: 0 auto; max-width: 540px; padding: 10px; width: 540px;\\">

            <div class=\\"content\\" style=\\"box-sizing: border-box; display: block; Margin: 0 auto; max-width: 600px; padding: 30px 20px;\\">

            <!-- START CENTERED CONTAINER -->
            <table class=\\"main\\" style=\\"border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%; background: #ffffff; border-radius: 8px;\\">

                <!-- START MAIN CONTENT AREA -->
                <tr>
                <td class=\\"wrapper\\" style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 14px; vertical-align: top; box-sizing: border-box;\\">
                    <table border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" style=\\"border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%;\\">
                        <tr>
                            <td align=\\"center\\" style=\\"padding-top: 20px; padding-bottom: 12px;\\"><img src=\\"https://static.ghost.org/v4.50.0/images/ghost-orb-1.png\\" width=\\"60\\" height=\\"60\\" style=\\"width: 60px; height: 60px;\\" /></td>
                        </tr>
                        <tr>
                            <td style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 16px; vertical-align: top;\\">
                            <p class=\\"title\\" style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 21px; color: #3A464C; font-weight: normal; line-height: 25px; margin-bottom: 0px; margin-top: 50px; font-weight: 600; color: #15212A;\\">Uh-oh!</p>
                            </td>
                        </tr>
                        <tr>
                            <td style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 14px; vertical-align: top; padding-top: 24px; padding-bottom: 10px;\\">
                                <p style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 16px; color: #3A464C; font-weight: normal; margin: 0; line-height: 25px; margin-bottom: 30px;\\">
                                Your <strong style=\\"font-weight: 600;\\">Zapier</strong> integration is no longer working as expected. This integration must be updated by its developer to work with your version of Ghost.
                                </p>

                                <p style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 16px; color: #3A464C; font-weight: normal; margin: 0; line-height: 25px; margin-bottom: 30px;\\">
                                  To help you get things fixed as quickly as possible, Ghost has automatically generated some helpful information about the error that you can share with the creator of the Zapier integration below:
                                </p>

                                <p style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 14px; color: #3A464C; font-weight: normal; margin: 0; line-height: 25px; margin-bottom: 20px;background-color:#f6f6f6; padding:20px; border-radius:2px;\\">
                                    <strong style=\\"font-weight: 600;\\">Integration expected Ghost version:</strong>&nbsp; v4.50
                                    <br>
                                    <strong style=\\"font-weight: 600;\\">Current Ghost version:</strong>&nbsp; v4.50
                                    <br>
                                    <strong style=\\"font-weight: 600;\\">Failed request URL:</strong>&nbsp; /ghost/api/admin/removed_endpoint/
                                </p>
                            </td>
                        </tr>
                    </table>
                </td>
            </tr>
            <tr>
                <td style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; vertical-align: top; padding-top: 80px; padding-bottom: 10px;\\">
                    <div class=\\"footer\\">
                        <p class=\\"small\\" style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; color: #738A94; font-weight: normal; margin: 0; line-height: 18px; margin-bottom: 0px; font-size: 11px;\\">This email was sent from <a href=\\"http://127.0.0.1:2369/\\" style=\\"color: #738A94;\\">http://127.0.0.1:2369/</a> to <a href=\\"mailto:jbloggs@example.com\\" style=\\"color: #738A94;\\">jbloggs@example.com</a></p>
                    </div>
                </td>
            </tr>

            <!-- END MAIN CONTENT AREA -->
            </table>

            <!-- END CENTERED CONTAINER -->
            </div>
        </td>
        <td style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 14px; vertical-align: top;\\">&nbsp;</td>
    </tr>
</table>
</body>
</html>
"
`;

exports[`API Versioning Admin API responds with error and sends email ONCE when requested version is BEHIND and CANNOT respond multiple times 3: [metadata 1] 1`] = `
Object {
  "encoding": "base64",
  "from": "\\"Ghost\\" <noreply@127.0.0.1>",
  "generateTextFromHTML": true,
  "replyTo": null,
  "subject": "Attention required: Your Zapier integration has failed",
  "to": "jbloggs@example.com",
}
`;

exports[`API Versioning Admin API responds with error and sends email ONCE when requested version is BEHIND and CANNOT respond multiple times 4: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": StringMatching /\\\\d\\+/,
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`API Versioning Admin API responds with error and sends email ONCE when requested version is BEHIND and CANNOT respond multiple times 4: [html 1] 1`] = `
"<!doctype html>
<html>
<head>
<meta name=\\"viewport\\" content=\\"width=device-width\\">
<meta http-equiv=\\"Content-Type\\" content=\\"text/html; charset=UTF-8\\">
<title>Integration error</title>
<style>
/* -------------------------------------
    RESPONSIVE AND MOBILE FRIENDLY STYLES
------------------------------------- */
@media only screen and (max-width: 620px) {
    table[class=body] h1 {
    font-size: 28px !important;
    margin-bottom: 10px !important;
    }
    table[class=body] p,
        table[class=body] ul,
        table[class=body] ol,
        table[class=body] td,
        table[class=body] span,
        table[class=body] a {
    font-size: 16px !important;
    }
    table[class=body] .title {
    font-size: 22px !important;
    }
    table[class=body] .wrapper,
        table[class=body] .article {
    padding: 10px !important;
    }
    table[class=body] .content {
    padding: 0 !important;
    }
    table[class=body] .container {
    padding: 0 !important;
    width: 100% !important;
    }
    table[class=body] .main {
    border-left-width: 0 !important;
    border-radius: 0 !important;
    border-right-width: 0 !important;
    }
    table[class=body] .btn table {
    width: 100% !important;
    }
    table[class=body] .btn a {
    width: 100% !important;
    }
    table[class=body] .img-responsive {
    height: auto !important;
    max-width: 100% !important;
    width: auto !important;
    }
    table[class=body] p[class=small],
    table[class=body] a[class=small] {
    font-size: 12x !important;
    }
}
/* -------------------------------------
    PRESERVE THESE STYLES IN THE HEAD
------------------------------------- */
@media all {
    .ExternalClass {
    width: 100%;
    }
    .ExternalClass,
        .ExternalClass p,
        .ExternalClass span,
        .ExternalClass font,
        .ExternalClass td,
        .ExternalClass div {
    line-height: 100%;
    }
    .recipient-link a {
    color: inherit !important;
    font-family: inherit !important;
    font-size: inherit !important;
    font-weight: inherit !important;
    line-height: inherit !important;
    text-decoration: none !important;
    }
    #MessageViewBody a {
    color: inherit;
    text-decoration: none;
    font-size: inherit;
    font-family: inherit;
    font-weight: inherit;
    line-height: inherit;
    }
}
hr {
    border-width: 0;
    height: 0;
    margin-top: 34px;
    margin-bottom: 34px;
    border-bottom-width: 1px;
    border-bottom-color: #EEF5F8;
}
a {
    color: #3A464C;
}
</style>
</head>
<body style=\\"background-color: #ffffff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; -webkit-font-smoothing: antialiased; font-size: 14px; line-height: 1.5em; margin: 0; padding: 0; -ms-text-size-adjust: 100%; -webkit-text-size-adjust: 100%;\\">

<table border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" class=\\"body\\" style=\\"border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%;\\">
    <tr>
        <td style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 14px; vertical-align: top;\\">&nbsp;</td>
        <td class=\\"container\\" style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 14px; vertical-align: top; display: block; Margin: 0 auto; max-width: 540px; padding: 10px; width: 540px;\\">

            <div class=\\"content\\" style=\\"box-sizing: border-box; display: block; Margin: 0 auto; max-width: 600px; padding: 30px 20px;\\">

            <!-- START CENTERED CONTAINER -->
            <table class=\\"main\\" style=\\"border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%; background: #ffffff; border-radius: 8px;\\">

                <!-- START MAIN CONTENT AREA -->
                <tr>
                <td class=\\"wrapper\\" style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 14px; vertical-align: top; box-sizing: border-box;\\">
                    <table border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" style=\\"border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%;\\">
                        <tr>
                            <td align=\\"center\\" style=\\"padding-top: 20px; padding-bottom: 12px;\\"><img src=\\"https://static.ghost.org/v4.50.0/images/ghost-orb-1.png\\" width=\\"60\\" height=\\"60\\" style=\\"width: 60px; height: 60px;\\" /></td>
                        </tr>
                        <tr>
                            <td style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 16px; vertical-align: top;\\">
                            <p class=\\"title\\" style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 21px; color: #3A464C; font-weight: normal; line-height: 25px; margin-bottom: 0px; margin-top: 50px; font-weight: 600; color: #15212A;\\">Uh-oh!</p>
                            </td>
                        </tr>
                        <tr>
                            <td style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 14px; vertical-align: top; padding-top: 24px; padding-bottom: 10px;\\">
                                <p style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 16px; color: #3A464C; font-weight: normal; margin: 0; line-height: 25px; margin-bottom: 30px;\\">
                                Your <strong style=\\"font-weight: 600;\\">Zapier</strong> integration is no longer working as expected. This integration must be updated by its developer to work with your version of Ghost.
                                </p>

                                <p style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 16px; color: #3A464C; font-weight: normal; margin: 0; line-height: 25px; margin-bottom: 30px;\\">
                                  To help you get things fixed as quickly as possible, Ghost has automatically generated some helpful information about the error that you can share with the creator of the Zapier integration below:
                                </p>

                                <p style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 14px; color: #3A464C; font-weight: normal; margin: 0; line-height: 25px; margin-bottom: 20px;background-color:#f6f6f6; padding:20px; border-radius:2px;\\">
                                    <strong style=\\"font-weight: 600;\\">Integration expected Ghost version:</strong>&nbsp; v4.50
                                    <br>
                                    <strong style=\\"font-weight: 600;\\">Current Ghost version:</strong>&nbsp; v4.50
                                    <br>
                                    <strong style=\\"font-weight: 600;\\">Failed request URL:</strong>&nbsp; /ghost/api/admin/removed_endpoint/
                                </p>
                            </td>
                        </tr>
                    </table>
                </td>
            </tr>
            <tr>
                <td style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; vertical-align: top; padding-top: 80px; padding-bottom: 10px;\\">
                    <div class=\\"footer\\">
                        <p class=\\"small\\" style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; color: #738A94; font-weight: normal; margin: 0; line-height: 18px; margin-bottom: 0px; font-size: 11px;\\">This email was sent from <a href=\\"http://127.0.0.1:2369/\\" style=\\"color: #738A94;\\">http://127.0.0.1:2369/</a> to <a href=\\"mailto:jbloggs@example.com\\" style=\\"color: #738A94;\\">jbloggs@example.com</a></p>
                    </div>
                </td>
            </tr>

            <!-- END MAIN CONTENT AREA -->
            </table>

            <!-- END CENTERED CONTAINER -->
            </div>
        </td>
        <td style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 14px; vertical-align: top;\\">&nbsp;</td>
    </tr>
</table>
</body>
</html>
"
`;

exports[`API Versioning Admin API responds with error and sends email ONCE when requested version is BEHIND and CANNOT respond multiple times 4: [text 1] 1`] = `
" [https://static.ghost.org/v4.50.0/images/ghost-orb-1.png] Uh-oh!

Your Zapier integration is no longer working as expected. This integration must
be updated by its developer to work with your version of Ghost. 

To help you get things fixed as quickly as possible, Ghost has automatically
generated some helpful information about the error that you can share with the
creator of the Zapier integration below: 

 Integration expected Ghost version:v4.50 
Current Ghost version:v4.50 
Failed request URL:/ghost/api/admin/removed_endpoint/ 

This email was sent from http://127.0.0.1:2369/ [http://127.0.0.1:2369/] to 
jbloggs@example.com [jbloggs@example.com]"
`;

exports[`API Versioning Admin API responds with error and sends email ONCE when requested version is BEHIND and CANNOT respond multiple times 5: [metadata 1] 1`] = `
Object {
  "subject": "Attention required: Your Zapier integration has failed",
  "to": "jbloggs@example.com",
}
`;

exports[`API Versioning Admin API responds with error and sends email ONCE when requested version is BEHIND and CANNOT respond multiple times 5: [text 1] 1`] = `
" [https://static.ghost.org/v4.50.0/images/ghost-orb-1.png] Uh-oh!

Your Zapier integration is no longer working as expected. This integration must
be updated by its developer to work with your version of Ghost. 

To help you get things fixed as quickly as possible, Ghost has automatically
generated some helpful information about the error that you can share with the
creator of the Zapier integration below: 

 Integration expected Ghost version:v4.50 
Current Ghost version:v4.50 
Failed request URL:/ghost/api/admin/removed_endpoint/ 

This email was sent from http://127.0.0.1:2369/ [http://127.0.0.1:2369/] to 
jbloggs@example.com [jbloggs@example.com]"
`;

exports[`API Versioning Admin API responds with error and sends email ONCE when requested version is BEHIND and CANNOT respond multiple times 6: [body] 1`] = `
Object {
  "errors": Array [
    Object {
      "code": "UPDATE_CLIENT",
      "context": StringMatching /Provided client accept-version v3\\.5 is behind current Ghost version v\\\\d\\+\\\\\\.\\\\d\\+/,
      "details": null,
      "ghostErrorCode": null,
      "help": "Try upgrading your Ghost API client.",
      "id": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      "message": "Request could not be served, the endpoint was not found.",
      "property": null,
      "type": "RequestNotAcceptableError",
    },
  ],
}
`;

exports[`API Versioning Admin API responds with error and sends email ONCE when requested version is BEHIND and CANNOT respond multiple times 7: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": StringMatching /\\\\d\\+/,
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`API Versioning Admin API responds with error requested version is AHEAD and CANNOT respond 1: [body] 1`] = `
Object {
  "errors": Array [
    Object {
      "code": "UPDATE_GHOST",
      "context": StringMatching /Provided client accept-version v999\\\\\\.1 is ahead of current Ghost version v\\\\d\\+\\\\\\.\\\\d\\+/,
      "details": null,
      "ghostErrorCode": null,
      "help": "Try upgrading your Ghost install.",
      "id": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      "message": "Request could not be served, the endpoint was not found.",
      "property": null,
      "type": "RequestNotAcceptableError",
    },
  ],
}
`;

exports[`API Versioning Admin API responds with error requested version is AHEAD and CANNOT respond 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": StringMatching /\\\\d\\+/,
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`API Versioning Admin API responds with error when requested version is BEHIND and CANNOT respond 1: [body] 1`] = `
Object {
  "errors": Array [
    Object {
      "code": "UPDATE_CLIENT",
      "context": StringMatching /Provided client accept-version v3\\.1 is behind current Ghost version v\\\\d\\+\\\\\\.\\\\d\\+/,
      "details": null,
      "ghostErrorCode": null,
      "help": "Try upgrading your Ghost API client.",
      "id": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      "message": "Request could not be served, the endpoint was not found.",
      "property": null,
      "type": "RequestNotAcceptableError",
    },
  ],
}
`;

exports[`API Versioning Admin API responds with error when requested version is BEHIND and CANNOT respond 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": StringMatching /\\\\d\\+/,
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`API Versioning Admin API responds with error when requested version is BEHIND and CANNOT respond 3: [html 1] 1`] = `
"<!doctype html>
<html>
<head>
<meta name=\\"viewport\\" content=\\"width=device-width\\">
<meta http-equiv=\\"Content-Type\\" content=\\"text/html; charset=UTF-8\\">
<title>Integration error</title>
<style>
/* -------------------------------------
    RESPONSIVE AND MOBILE FRIENDLY STYLES
------------------------------------- */
@media only screen and (max-width: 620px) {
    table[class=body] h1 {
    font-size: 28px !important;
    margin-bottom: 10px !important;
    }
    table[class=body] p,
        table[class=body] ul,
        table[class=body] ol,
        table[class=body] td,
        table[class=body] span,
        table[class=body] a {
    font-size: 16px !important;
    }
    table[class=body] .title {
    font-size: 22px !important;
    }
    table[class=body] .wrapper,
        table[class=body] .article {
    padding: 10px !important;
    }
    table[class=body] .content {
    padding: 0 !important;
    }
    table[class=body] .container {
    padding: 0 !important;
    width: 100% !important;
    }
    table[class=body] .main {
    border-left-width: 0 !important;
    border-radius: 0 !important;
    border-right-width: 0 !important;
    }
    table[class=body] .btn table {
    width: 100% !important;
    }
    table[class=body] .btn a {
    width: 100% !important;
    }
    table[class=body] .img-responsive {
    height: auto !important;
    max-width: 100% !important;
    width: auto !important;
    }
    table[class=body] p[class=small],
    table[class=body] a[class=small] {
    font-size: 12x !important;
    }
}
/* -------------------------------------
    PRESERVE THESE STYLES IN THE HEAD
------------------------------------- */
@media all {
    .ExternalClass {
    width: 100%;
    }
    .ExternalClass,
        .ExternalClass p,
        .ExternalClass span,
        .ExternalClass font,
        .ExternalClass td,
        .ExternalClass div {
    line-height: 100%;
    }
    .recipient-link a {
    color: inherit !important;
    font-family: inherit !important;
    font-size: inherit !important;
    font-weight: inherit !important;
    line-height: inherit !important;
    text-decoration: none !important;
    }
    #MessageViewBody a {
    color: inherit;
    text-decoration: none;
    font-size: inherit;
    font-family: inherit;
    font-weight: inherit;
    line-height: inherit;
    }
}
hr {
    border-width: 0;
    height: 0;
    margin-top: 34px;
    margin-bottom: 34px;
    border-bottom-width: 1px;
    border-bottom-color: #EEF5F8;
}
a {
    color: #3A464C;
}
</style>
</head>
<body style=\\"background-color: #ffffff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; -webkit-font-smoothing: antialiased; font-size: 14px; line-height: 1.5em; margin: 0; padding: 0; -ms-text-size-adjust: 100%; -webkit-text-size-adjust: 100%;\\">

<table border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" class=\\"body\\" style=\\"border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%;\\">
    <tr>
        <td style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 14px; vertical-align: top;\\">&nbsp;</td>
        <td class=\\"container\\" style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 14px; vertical-align: top; display: block; Margin: 0 auto; max-width: 540px; padding: 10px; width: 540px;\\">

            <div class=\\"content\\" style=\\"box-sizing: border-box; display: block; Margin: 0 auto; max-width: 600px; padding: 30px 20px;\\">

            <!-- START CENTERED CONTAINER -->
            <table class=\\"main\\" style=\\"border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%; background: #ffffff; border-radius: 8px;\\">

                <!-- START MAIN CONTENT AREA -->
                <tr>
                <td class=\\"wrapper\\" style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 14px; vertical-align: top; box-sizing: border-box;\\">
                    <table border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" style=\\"border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%;\\">
                        <tr>
                            <td align=\\"center\\" style=\\"padding-top: 20px; padding-bottom: 12px;\\"><img src=\\"https://static.ghost.org/v4.50.0/images/ghost-orb-1.png\\" width=\\"60\\" height=\\"60\\" style=\\"width: 60px; height: 60px;\\" /></td>
                        </tr>
                        <tr>
                            <td style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 16px; vertical-align: top;\\">
                            <p class=\\"title\\" style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 21px; color: #3A464C; font-weight: normal; line-height: 25px; margin-bottom: 0px; margin-top: 50px; font-weight: 600; color: #15212A;\\">Uh-oh!</p>
                            </td>
                        </tr>
                        <tr>
                            <td style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 14px; vertical-align: top; padding-top: 24px; padding-bottom: 10px;\\">
                                <p style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 16px; color: #3A464C; font-weight: normal; margin: 0; line-height: 25px; margin-bottom: 30px;\\">
                                Your <strong style=\\"font-weight: 600;\\">Zapier</strong> integration is no longer working as expected. This integration must be updated by its developer to work with your version of Ghost.
                                </p>

                                <p style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 16px; color: #3A464C; font-weight: normal; margin: 0; line-height: 25px; margin-bottom: 30px;\\">
                                  To help you get things fixed as quickly as possible, Ghost has automatically generated some helpful information about the error that you can share with the creator of the Zapier integration below:
                                </p>

                                <p style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 14px; color: #3A464C; font-weight: normal; margin: 0; line-height: 25px; margin-bottom: 20px;background-color:#f6f6f6; padding:20px; border-radius:2px;\\">
                                    <strong style=\\"font-weight: 600;\\">Integration expected Ghost version:</strong>&nbsp; v4.50
                                    <br>
                                    <strong style=\\"font-weight: 600;\\">Current Ghost version:</strong>&nbsp; v4.50
                                    <br>
                                    <strong style=\\"font-weight: 600;\\">Failed request URL:</strong>&nbsp; /ghost/api/admin/removed_endpoint/
                                </p>
                            </td>
                        </tr>
                    </table>
                </td>
            </tr>
            <tr>
                <td style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; vertical-align: top; padding-top: 80px; padding-bottom: 10px;\\">
                    <div class=\\"footer\\">
                        <p class=\\"small\\" style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; color: #738A94; font-weight: normal; margin: 0; line-height: 18px; margin-bottom: 0px; font-size: 11px;\\">This email was sent from <a href=\\"http://127.0.0.1:2369/\\" style=\\"color: #738A94;\\">http://127.0.0.1:2369/</a> to <a href=\\"mailto:jbloggs@example.com\\" style=\\"color: #738A94;\\">jbloggs@example.com</a></p>
                    </div>
                </td>
            </tr>

            <!-- END MAIN CONTENT AREA -->
            </table>

            <!-- END CENTERED CONTAINER -->
            </div>
        </td>
        <td style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 14px; vertical-align: top;\\">&nbsp;</td>
    </tr>
</table>
</body>
</html>
"
`;

exports[`API Versioning Admin API responds with error when requested version is BEHIND and CANNOT respond 3: [metadata 1] 1`] = `
Object {
  "encoding": "base64",
  "from": "\\"Ghost\\" <noreply@127.0.0.1>",
  "generateTextFromHTML": true,
  "replyTo": null,
  "subject": "Attention required: Your Zapier integration has failed",
  "to": "jbloggs@example.com",
}
`;

exports[`API Versioning Admin API responds with error when requested version is BEHIND and CANNOT respond 4: [html 1] 1`] = `
"<!doctype html>
<html>
<head>
<meta name=\\"viewport\\" content=\\"width=device-width\\">
<meta http-equiv=\\"Content-Type\\" content=\\"text/html; charset=UTF-8\\">
<title>Integration error</title>
<style>
/* -------------------------------------
    RESPONSIVE AND MOBILE FRIENDLY STYLES
------------------------------------- */
@media only screen and (max-width: 620px) {
    table[class=body] h1 {
    font-size: 28px !important;
    margin-bottom: 10px !important;
    }
    table[class=body] p,
        table[class=body] ul,
        table[class=body] ol,
        table[class=body] td,
        table[class=body] span,
        table[class=body] a {
    font-size: 16px !important;
    }
    table[class=body] .title {
    font-size: 22px !important;
    }
    table[class=body] .wrapper,
        table[class=body] .article {
    padding: 10px !important;
    }
    table[class=body] .content {
    padding: 0 !important;
    }
    table[class=body] .container {
    padding: 0 !important;
    width: 100% !important;
    }
    table[class=body] .main {
    border-left-width: 0 !important;
    border-radius: 0 !important;
    border-right-width: 0 !important;
    }
    table[class=body] .btn table {
    width: 100% !important;
    }
    table[class=body] .btn a {
    width: 100% !important;
    }
    table[class=body] .img-responsive {
    height: auto !important;
    max-width: 100% !important;
    width: auto !important;
    }
    table[class=body] p[class=small],
    table[class=body] a[class=small] {
    font-size: 12x !important;
    }
}
/* -------------------------------------
    PRESERVE THESE STYLES IN THE HEAD
------------------------------------- */
@media all {
    .ExternalClass {
    width: 100%;
    }
    .ExternalClass,
        .ExternalClass p,
        .ExternalClass span,
        .ExternalClass font,
        .ExternalClass td,
        .ExternalClass div {
    line-height: 100%;
    }
    .recipient-link a {
    color: inherit !important;
    font-family: inherit !important;
    font-size: inherit !important;
    font-weight: inherit !important;
    line-height: inherit !important;
    text-decoration: none !important;
    }
    #MessageViewBody a {
    color: inherit;
    text-decoration: none;
    font-size: inherit;
    font-family: inherit;
    font-weight: inherit;
    line-height: inherit;
    }
}
hr {
    border-width: 0;
    height: 0;
    margin-top: 34px;
    margin-bottom: 34px;
    border-bottom-width: 1px;
    border-bottom-color: #EEF5F8;
}
a {
    color: #3A464C;
}
</style>
</head>
<body style=\\"background-color: #ffffff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; -webkit-font-smoothing: antialiased; font-size: 14px; line-height: 1.5em; margin: 0; padding: 0; -ms-text-size-adjust: 100%; -webkit-text-size-adjust: 100%;\\">

<table border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" class=\\"body\\" style=\\"border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%;\\">
    <tr>
        <td style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 14px; vertical-align: top;\\">&nbsp;</td>
        <td class=\\"container\\" style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 14px; vertical-align: top; display: block; Margin: 0 auto; max-width: 540px; padding: 10px; width: 540px;\\">

            <div class=\\"content\\" style=\\"box-sizing: border-box; display: block; Margin: 0 auto; max-width: 600px; padding: 30px 20px;\\">

            <!-- START CENTERED CONTAINER -->
            <table class=\\"main\\" style=\\"border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%; background: #ffffff; border-radius: 8px;\\">

                <!-- START MAIN CONTENT AREA -->
                <tr>
                <td class=\\"wrapper\\" style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 14px; vertical-align: top; box-sizing: border-box;\\">
                    <table border=\\"0\\" cellpadding=\\"0\\" cellspacing=\\"0\\" style=\\"border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%;\\">
                        <tr>
                            <td align=\\"center\\" style=\\"padding-top: 20px; padding-bottom: 12px;\\"><img src=\\"https://static.ghost.org/v4.50.0/images/ghost-orb-1.png\\" width=\\"60\\" height=\\"60\\" style=\\"width: 60px; height: 60px;\\" /></td>
                        </tr>
                        <tr>
                            <td style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 16px; vertical-align: top;\\">
                            <p class=\\"title\\" style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 21px; color: #3A464C; font-weight: normal; line-height: 25px; margin-bottom: 0px; margin-top: 50px; font-weight: 600; color: #15212A;\\">Uh-oh!</p>
                            </td>
                        </tr>
                        <tr>
                            <td style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 14px; vertical-align: top; padding-top: 24px; padding-bottom: 10px;\\">
                                <p style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 16px; color: #3A464C; font-weight: normal; margin: 0; line-height: 25px; margin-bottom: 30px;\\">
                                Your <strong style=\\"font-weight: 600;\\">Zapier</strong> integration is no longer working as expected. This integration must be updated by its developer to work with your version of Ghost.
                                </p>

                                <p style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 16px; color: #3A464C; font-weight: normal; margin: 0; line-height: 25px; margin-bottom: 30px;\\">
                                  To help you get things fixed as quickly as possible, Ghost has automatically generated some helpful information about the error that you can share with the creator of the Zapier integration below:
                                </p>

                                <p style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 14px; color: #3A464C; font-weight: normal; margin: 0; line-height: 25px; margin-bottom: 20px;background-color:#f6f6f6; padding:20px; border-radius:2px;\\">
                                    <strong style=\\"font-weight: 600;\\">Integration expected Ghost version:</strong>&nbsp; v4.50
                                    <br>
                                    <strong style=\\"font-weight: 600;\\">Current Ghost version:</strong>&nbsp; v4.50
                                    <br>
                                    <strong style=\\"font-weight: 600;\\">Failed request URL:</strong>&nbsp; /ghost/api/admin/removed_endpoint/
                                </p>
                            </td>
                        </tr>
                    </table>
                </td>
            </tr>
            <tr>
                <td style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; vertical-align: top; padding-top: 80px; padding-bottom: 10px;\\">
                    <div class=\\"footer\\">
                        <p class=\\"small\\" style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; color: #738A94; font-weight: normal; margin: 0; line-height: 18px; margin-bottom: 0px; font-size: 11px;\\">This email was sent from <a href=\\"http://127.0.0.1:2369/\\" style=\\"color: #738A94;\\">http://127.0.0.1:2369/</a> to <a href=\\"mailto:jbloggs@example.com\\" style=\\"color: #738A94;\\">jbloggs@example.com</a></p>
                    </div>
                </td>
            </tr>

            <!-- END MAIN CONTENT AREA -->
            </table>

            <!-- END CENTERED CONTAINER -->
            </div>
        </td>
        <td style=\\"font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; font-size: 14px; vertical-align: top;\\">&nbsp;</td>
    </tr>
</table>
</body>
</html>
"
`;

exports[`API Versioning Admin API responds with error when requested version is BEHIND and CANNOT respond 4: [text 1] 1`] = `
" [https://static.ghost.org/v4.50.0/images/ghost-orb-1.png] Uh-oh!

Your Zapier integration is no longer working as expected. This integration must
be updated by its developer to work with your version of Ghost. 

To help you get things fixed as quickly as possible, Ghost has automatically
generated some helpful information about the error that you can share with the
creator of the Zapier integration below: 

 Integration expected Ghost version:v4.50 
Current Ghost version:v4.50 
Failed request URL:/ghost/api/admin/removed_endpoint/ 

This email was sent from http://127.0.0.1:2369/ [http://127.0.0.1:2369/] to 
jbloggs@example.com [jbloggs@example.com]"
`;

exports[`API Versioning Admin API responds with error when requested version is BEHIND and CANNOT respond 5: [metadata 1] 1`] = `
Object {
  "subject": "Attention required: Your Zapier integration has failed",
  "to": "jbloggs@example.com",
}
`;

exports[`API Versioning Admin API responds with error when requested version is BEHIND and CANNOT respond 5: [text 1] 1`] = `
" [https://static.ghost.org/v4.50.0/images/ghost-orb-1.png] Uh-oh!

Your Zapier integration is no longer working as expected. This integration must
be updated by its developer to work with your version of Ghost. 

To help you get things fixed as quickly as possible, Ghost has automatically
generated some helpful information about the error that you can share with the
creator of the Zapier integration below: 

 Integration expected Ghost version:v4.50 
Current Ghost version:v4.50 
Failed request URL:/ghost/api/admin/removed_endpoint/ 

This email was sent from http://127.0.0.1:2369/ [http://127.0.0.1:2369/] to 
jbloggs@example.com [jbloggs@example.com]"
`;

exports[`API Versioning Content API Does an internal rewrite with accept version set when version is included in the URL 1: [body] 1`] = `
Object {
  "meta": Object {
    "pagination": Object {
      "limit": 1,
      "next": null,
      "page": 1,
      "pages": 1,
      "prev": null,
      "total": 1,
    },
  },
  "tags": Array [
    Object {
      "accent_color": null,
      "canonical_url": null,
      "codeinjection_foot": null,
      "codeinjection_head": null,
      "description": null,
      "feature_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "meta_description": null,
      "meta_title": null,
      "name": "Getting Started",
      "og_description": null,
      "og_image": null,
      "og_title": null,
      "slug": "getting-started",
      "twitter_description": null,
      "twitter_image": null,
      "twitter_title": null,
      "url": "http://127.0.0.1:2369/tag/getting-started/",
      "visibility": "public",
    },
  ],
}
`;

exports[`API Versioning Content API Does an internal rewrite with accept version set when version is included in the URL 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "*",
  "cache-control": "public, max-age=0",
  "content-length": StringMatching /\\\\d\\+/,
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "deprecation": "version=\\"v4\\"",
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "link": "<http://127.0.0.1:2369/ghost/api/content/tags/?limit=1&key=cccccccccccccccccccccccccc>; rel=\\"latest-version\\"",
  "vary": "Accept-Version, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`API Versioning Content API responds with 404 error when the resource cannot be found 1: [body] 1`] = `
Object {
  "errors": Array [
    Object {
      "code": null,
      "context": "Post not found.",
      "details": null,
      "ghostErrorCode": null,
      "help": null,
      "id": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      "message": "Resource not found error, cannot read post.",
      "property": null,
      "type": "NotFoundError",
    },
  ],
}
`;

exports[`API Versioning Content API responds with 404 error when the resource cannot be found 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "*",
  "cache-control": "no-cache, max-age=0, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": StringMatching /\\\\d\\+/,
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`API Versioning Content API responds with current content version header when requested version is BEHIND current version and CAN respond 1: [body] 1`] = `
Object {
  "meta": Object {},
  "settings": Object {
    "accent_color": "#FF1A75",
    "allow_self_signup": true,
    "codeinjection_foot": null,
    "codeinjection_head": null,
    "comments_enabled": "off",
    "cover_image": "https://static.ghost.org/v5.0.0/images/publication-cover.jpg",
    "default_email_address": "noreply@127.0.0.1",
    "description": "Thoughts, stories and ideas",
    "editor_default_email_recipients": "visibility",
    "facebook": "ghost",
    "firstpromoter_account": null,
    "icon": null,
    "lang": "en",
    "locale": "en",
    "logo": null,
    "members_enabled": true,
    "members_invite_only": false,
    "members_support_address": "noreply",
    "meta_description": null,
    "meta_title": null,
    "navigation": Array [
      Object {
        "label": "Home",
        "url": "/",
      },
      Object {
        "label": "About",
        "url": "/about/",
      },
      Object {
        "label": "Collection",
        "url": "/tag/getting-started/",
      },
      Object {
        "label": "Author",
        "url": "/author/ghost/",
      },
      Object {
        "label": "Portal",
        "url": "/portal/",
      },
    ],
    "og_description": null,
    "og_image": null,
    "og_title": null,
    "outbound_link_tagging": true,
    "paid_members_enabled": true,
    "portal_button": true,
    "portal_button_icon": null,
    "portal_button_signup_text": "Subscribe",
    "portal_button_style": "icon-and-text",
    "portal_default_plan": "yearly",
    "portal_name": true,
    "portal_plans": Array [
      "free",
    ],
    "portal_signup_checkbox_required": false,
    "portal_signup_terms_html": null,
    "recommendations_enabled": false,
    "secondary_navigation": Array [
      Object {
        "label": "Data & privacy",
        "url": "/privacy/",
      },
      Object {
        "label": "Contact",
        "url": "/contact/",
      },
      Object {
        "label": "Contribute →",
        "url": "/contribute/",
      },
    ],
    "support_email_address": "noreply@127.0.0.1",
    "timezone": "Etc/UTC",
    "title": "Ghost",
    "twitter": "@ghost",
    "twitter_description": null,
    "twitter_image": null,
    "twitter_title": null,
    "url": "http://127.0.0.1:2369/",
    "version": Any<String>,
  },
}
`;

exports[`API Versioning Content API responds with current content version header when requested version is BEHIND current version and CAN respond 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "*",
  "cache-control": "public, max-age=0",
  "content-length": StringMatching /\\\\d\\+/,
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`API Versioning Content API responds with no content version header when accept version header is NOT PRESENT 1: [body] 1`] = `
Object {
  "meta": Object {},
  "settings": Object {
    "accent_color": "#FF1A75",
    "allow_self_signup": true,
    "codeinjection_foot": null,
    "codeinjection_head": null,
    "comments_enabled": "off",
    "cover_image": "https://static.ghost.org/v5.0.0/images/publication-cover.jpg",
    "default_email_address": "noreply@127.0.0.1",
    "description": "Thoughts, stories and ideas",
    "editor_default_email_recipients": "visibility",
    "facebook": "ghost",
    "firstpromoter_account": null,
    "icon": null,
    "lang": "en",
    "locale": "en",
    "logo": null,
    "members_enabled": true,
    "members_invite_only": false,
    "members_support_address": "noreply",
    "meta_description": null,
    "meta_title": null,
    "navigation": Array [
      Object {
        "label": "Home",
        "url": "/",
      },
      Object {
        "label": "About",
        "url": "/about/",
      },
      Object {
        "label": "Collection",
        "url": "/tag/getting-started/",
      },
      Object {
        "label": "Author",
        "url": "/author/ghost/",
      },
      Object {
        "label": "Portal",
        "url": "/portal/",
      },
    ],
    "og_description": null,
    "og_image": null,
    "og_title": null,
    "outbound_link_tagging": true,
    "paid_members_enabled": true,
    "portal_button": true,
    "portal_button_icon": null,
    "portal_button_signup_text": "Subscribe",
    "portal_button_style": "icon-and-text",
    "portal_default_plan": "yearly",
    "portal_name": true,
    "portal_plans": Array [
      "free",
    ],
    "portal_signup_checkbox_required": false,
    "portal_signup_terms_html": null,
    "recommendations_enabled": false,
    "secondary_navigation": Array [
      Object {
        "label": "Data & privacy",
        "url": "/privacy/",
      },
      Object {
        "label": "Contact",
        "url": "/contact/",
      },
      Object {
        "label": "Contribute →",
        "url": "/contribute/",
      },
    ],
    "support_email_address": "noreply@127.0.0.1",
    "timezone": "Etc/UTC",
    "title": "Ghost",
    "twitter": "@ghost",
    "twitter_description": null,
    "twitter_image": null,
    "twitter_title": null,
    "url": "http://127.0.0.1:2369/",
    "version": Any<String>,
  },
}
`;

exports[`API Versioning Content API responds with no content version header when accept version header is NOT PRESENT 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "*",
  "cache-control": "public, max-age=0",
  "content-length": StringMatching /\\\\d\\+/,
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Accept-Encoding",
  "x-powered-by": "Express",
}
`;
